@@ -1,10 +1,7 @@
 package core.domain.chat.service;
 
 
-import core.domain.chat.dto.ChatMessageResponse;
-import core.domain.chat.dto.ChatRoomSummaryResponse;
-import core.domain.chat.dto.GroupChatDetailResponse;
-import core.domain.chat.dto.GroupChatSearchResponse;
+import core.domain.chat.dto.*;
 import core.domain.chat.entity.ChatMessage;
 import core.domain.chat.entity.ChatMessageReadStatus;
 import core.domain.chat.entity.ChatParticipant;
@@ -20,8 +17,6 @@ import core.global.enums.ErrorCode;
 import core.global.enums.ImageType;
 import core.global.exception.BusinessException;
 import core.global.image.repository.ImageRepository;
-import jdk.jshell.spi.ExecutionControl;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
@@ -35,6 +30,7 @@ import java.time.ZoneId;
 import java.time.format.DateTimeFormatter;
 import java.util.*;
 import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 
 @Service
 public class ChatService {
@@ -45,16 +41,15 @@ public class ChatService {
     private final UserRepository userRepository;
     private final ChatParticipantRepository chatParticipantRepository;
     private static final int MESSAGE_PAGE_SIZE = 20;
-    private static final int MESSAGE_SEARCH_PAGE_SIZE = 20;
     private final ChatMessageReadStatusRepository chatMessageReadStatusRepository;
     private final TranslationService translationService;
     private final ImageRepository imageRepository;
     private final ChatRoomRepository chatRoomRepository;
-
+    private final SimpMessagingTemplate messagingTemplate; // 주입 필요
     public ChatService(ChatRoomRepository chatRoomRepo,
                        ChatParticipantRepository participantRepo, ChatMessageRepository chatMessageRepository,
                        UserRepository userRepository, ChatParticipantRepository chatParticipantRepository,
-                       ChatMessageReadStatusRepository chatMessageReadStatusRepository, TranslationService translationService, ImageRepository imageRepository, ChatRoomRepository chatRoomRepository) {
+                       ChatMessageReadStatusRepository chatMessageReadStatusRepository, TranslationService translationService, ImageRepository imageRepository, ChatRoomRepository chatRoomRepository, SimpMessagingTemplate messagingTemplate) {
         this.chatRoomRepo = chatRoomRepo;
         this.participantRepo = participantRepo;
 
@@ -65,12 +60,13 @@ public class ChatService {
         this.translationService = translationService;
         this.imageRepository = imageRepository;
         this.chatRoomRepository = chatRoomRepository;
+        this.messagingTemplate = messagingTemplate;
     }
     public List<ChatRoomSummaryResponse> getMyAllChatRoomSummaries(Long userId) {
         User currentUser = userRepository.findById(userId)
                 .orElseThrow(() -> new BusinessException(ErrorCode.USER_NOT_FOUND));
 
-        List<ChatRoom> rooms = chatRoomRepo.findChatRoomsByUserId(userId);
+        List<ChatRoom> rooms = chatRoomRepo.findActiveChatRoomsByUserId(userId,ChatParticipantStatus.ACTIVE);
 
         return rooms.stream().map(room -> {
             String lastMessageContent = getLastMessageContent(room.getId());
@@ -135,7 +131,10 @@ public class ChatService {
         User otherUser = userRepository.findById(userId2)
                 .orElseThrow(() -> new BusinessException(ErrorCode.USER_NOT_FOUND));
 
-        ChatRoom newRoom = new ChatRoom(false, Instant.now());
+        String roomName = otherUser.getFirstName() + " " + otherUser.getLastName();
+
+        ChatRoom newRoom = new ChatRoom(false, Instant.now(), roomName);
+
         ChatParticipant participant1 = new ChatParticipant(newRoom, currentUser);
         ChatParticipant participant2 = new ChatParticipant(newRoom, otherUser);
 
@@ -144,8 +143,6 @@ public class ChatService {
 
         return chatRoomRepo.save(newRoom);
     }
-
-
     /**
      * 사용자가 채팅방을 나갑니다.
      * 1:1 채팅방의 경우, 상대방은 방에 남아있습니다.
@@ -175,25 +172,41 @@ public class ChatService {
         ChatRoom room = chatRoomRepo.findById(roomId)
                 .orElseThrow(() -> new BusinessException(ErrorCode.CHAT_ROOM_NOT_FOUND));
 
-        // 2. ACTIVE 상태의 참가자만 카운트
         long remainingActiveParticipants = participantRepo.countByChatRoomIdAndStatus(roomId, ChatParticipantStatus.ACTIVE);
 
-        // 3. 남은 ACTIVE 참가자가 0명일 경우에만 방 삭제
         if (remainingActiveParticipants == 0) {
             chatRoomRepo.delete(room);
         }
     }
-    @Transactional
-    public void forceDeleteRoom(Long roomId) {
-        ChatRoom room = chatRoomRepo.findById(roomId)
-                .orElseThrow(() -> new BusinessException(ErrorCode.CHAT_ROOM_NOT_FOUND));
-        chatRoomRepo.delete(room);
-    }
+
 
     public List<ChatParticipant> getParticipants(Long roomId) {
         return participantRepo.findByChatRoomId(roomId);
     }
+    public List<ChatRoomParticipantsResponse> getRoomParticipants(Long roomId) {
+        ChatRoom chatRoom = chatRoomRepository.findById(roomId)
+                .orElseThrow(() -> new BusinessException(ErrorCode.CHAT_ROOM_NOT_FOUND));
 
+        List<ChatParticipant> participants = chatParticipantRepository.findByChatRoom(chatRoom);
+        return participants.stream()
+                .map(p -> {
+                    String userImageUrl = imageRepository.findFirstByImageTypeAndRelatedIdOrderByOrderIndexAsc(
+                                    ImageType.USER, p.getUser().getId())
+                            .map(Image::getUrl)
+                            .orElse(null);
+
+                    boolean isHost = chatRoom.getOwner() != null && chatRoom.getOwner().getId().equals(p.getUser().getId());
+
+                    return new ChatRoomParticipantsResponse(
+                            p.getUser().getId(),
+                            p.getUser().getFirstName(),
+                            p.getUser().getLastName(),
+                            userImageUrl,
+                            isHost
+                    );
+                })
+                .collect(Collectors.toList());
+    }
     /**
             * @apiNote 채팅방 메시지를 무한 스크롤로 조회하는 핵심 로직입니다.
      * 이 메서드는 항상 ChatMessage 엔티티 목록을 반환합니다.
@@ -244,60 +257,77 @@ public class ChatService {
      * @param roomId 채팅방 ID
      * @param userId 조회하는 사용자 ID
      * @param lastMessageId 마지막으로 조회된 메시지 ID (무한 스크롤용)
-     * @param translate 메시지 번역 요청 여부
      * @return ChatMessageResponse 목록
      */
+    // ChatService.java
+
     @Transactional(readOnly = true)
     public List<ChatMessageResponse> getMessages(
             Long roomId,
             Long userId,
-            Long lastMessageId,
-            boolean translate
+            Long lastMessageId
+
     ) {
+        ChatParticipant participant = chatParticipantRepository.findByChatRoomIdAndUserId(roomId, userId)
+                .orElseThrow(() -> new BusinessException(ErrorCode.NOT_CHAT_PARTICIPANT));
+
+        boolean needsTranslation = participant.isTranslateEnabled();
+        String targetLanguage = participant.getUser().getLanguage();
+
         List<ChatMessage> messages = getRawMessages(roomId, userId, lastMessageId);
 
-        if (translate) {
-            User user = userRepository.findById(userId)
-                    .orElseThrow(() -> new BusinessException(ErrorCode.USER_NOT_FOUND));
-
-            String targetLanguage = user.getLanguage();
-            if (targetLanguage == null || targetLanguage.isEmpty()) {
-                return messages.stream()
-                        .map(ChatMessageResponse::fromEntity)
-                        .toList();
-            }
-
+        // 번역이 필요한 경우
+        if (needsTranslation && targetLanguage != null && !targetLanguage.isEmpty()) {
             List<String> originalContents = messages.stream()
                     .map(ChatMessage::getContent)
                     .collect(Collectors.toList());
             List<String> translatedContents = translationService.translateMessages(originalContents, targetLanguage);
 
-            return messages.stream()
-                    .map(message -> {
-                        int index = messages.indexOf(message);
-                        String translatedContent = translatedContents.get(index);
+            return IntStream.range(0, messages.size())
+                    .mapToObj(i -> {
+                        ChatMessage message = messages.get(i);
+                        String translatedContent = translatedContents.get(i);
+                        User sender = message.getSender();
+                        String senderImageUrl = imageRepository.findFirstByImageTypeAndRelatedIdOrderByOrderIndexAsc(ImageType.USER, sender.getId())
+                                .map(Image::getUrl)
+                                .orElse(null);
+
                         return new ChatMessageResponse(
                                 message.getId(),
                                 message.getChatRoom().getId(),
-                                message.getSender().getId(),
+                                sender.getId(),
+                                message.getContent(),
                                 translatedContent,
                                 message.getSentAt(),
-                                message.getContent()
+                                sender.getFirstName(),
+                                sender.getLastName(),
+                                senderImageUrl
                         );
-                    }).toList();
-        } else {
+                    }).collect(Collectors.toList());
+        }
+        // 번역이 필요 없는 경우
+        else {
             return messages.stream()
-                    .map(message -> new ChatMessageResponse(
-                            message.getId(),
-                            message.getChatRoom().getId(),
-                            message.getSender().getId(),
-                            message.getContent(),
-                            message.getSentAt(),
-                            null
-                    )).toList();
+                    .map(message -> {
+                        User sender = message.getSender();
+                        String senderImageUrl = imageRepository.findFirstByImageTypeAndRelatedIdOrderByOrderIndexAsc(ImageType.USER, sender.getId())
+                                .map(Image::getUrl)
+                                .orElse(null);
+
+                        return new ChatMessageResponse(
+                                message.getId(),
+                                message.getChatRoom().getId(),
+                                sender.getId(),
+                                message.getContent(),
+                                null,
+                                message.getSentAt(),
+                                sender.getFirstName(),
+                                sender.getLastName(),
+                                senderImageUrl
+                        );
+                    }).collect(Collectors.toList());
         }
     }
-
 
     @Transactional
     public ChatMessage saveMessage(Long roomId, Long senderId, String content) {
@@ -327,24 +357,77 @@ public class ChatService {
         return chatMessageRepository.save(message);
     }
 
+    // ChatService.java
+
     @Transactional(readOnly = true)
-    public List<ChatMessage> searchMessages(Long roomId, Long userId, String searchKeyword) {
-        ChatParticipant participant = participantRepo.findByChatRoomIdAndUserId(roomId, userId)
-                .orElseThrow(() -> new BusinessException(ErrorCode.CHAT_PARTICIPANT_NOT_FOUND));
+    public List<ChatMessageResponse> searchMessages(Long roomId, Long userId, String keyword) {
+        ChatParticipant participant = chatParticipantRepository.findByChatRoomIdAndUserId(roomId, userId)
+                .orElseThrow(() -> new BusinessException(ErrorCode.NOT_CHAT_PARTICIPANT));
 
-        Pageable pageable = PageRequest.of(0, MESSAGE_SEARCH_PAGE_SIZE, Sort.by(Sort.Direction.DESC, "sentAt"));
-        return chatMessageRepository.findByChatRoomIdAndContentContaining(
-                roomId, searchKeyword, pageable);
-    }
+        boolean needsTranslation = participant.isTranslateEnabled();
+        String targetLanguage = participant.getUser().getLanguage();
 
-    @Transactional
-    public boolean deleteMessage(Long messageId) {
-        if (!chatMessageRepository.existsById(messageId)) {
-            return false;
+        if (!needsTranslation || targetLanguage == null || targetLanguage.isEmpty()) {
+            List<ChatMessage> messages = chatMessageRepository.findByChatRoomIdAndContentContaining(roomId, keyword);
+            return messages.stream()
+                    .map(message -> {
+                        User sender = message.getSender();
+                        String userImageUrl = imageRepository.findFirstByImageTypeAndRelatedIdOrderByOrderIndexAsc(ImageType.USER, sender.getId())
+                                .map(Image::getUrl)
+                                .orElse(null);
+
+                        return new ChatMessageResponse(
+                                message.getId(),
+                                message.getChatRoom().getId(),
+                                sender.getId(),
+                                message.getContent(),
+                                null,
+                                message.getSentAt(),
+                                sender.getFirstName(),
+                                sender.getLastName(),
+                                userImageUrl
+                        );
+                    })
+                    .collect(Collectors.toList());
         }
-        chatMessageRepository.deleteById(messageId);
-        return true;
+        else {
+            List<ChatMessage> allMessages = chatMessageRepository.findByChatRoomIdOrderByIdAsc(roomId);
+            if (allMessages.isEmpty()) {
+                return new ArrayList<>();
+            }
+
+            List<String> originalContents = allMessages.stream().map(ChatMessage::getContent).collect(Collectors.toList());
+            List<String> translatedContents = translationService.translateMessages(originalContents, targetLanguage);
+
+            List<MessagePair> messagePairs = IntStream.range(0, allMessages.size())
+                    .mapToObj(i -> new MessagePair(allMessages.get(i), translatedContents.get(i)))
+                    .toList();
+
+            return messagePairs.stream()
+                    .filter(pair -> pair.translatedContent().toLowerCase().contains(keyword.toLowerCase()))
+                    .map(pair -> {
+                        User sender = pair.originalMessage().getSender();
+                        String userImageUrl = imageRepository.findFirstByImageTypeAndRelatedIdOrderByOrderIndexAsc(ImageType.USER, sender.getId())
+                                .map(Image::getUrl)
+                                .orElse(null);
+
+                        return new ChatMessageResponse(
+                                pair.originalMessage().getId(),
+                                pair.originalMessage().getChatRoom().getId(),
+                                sender.getId(),
+                                pair.originalMessage().getContent(),
+                                pair.translatedContent(),
+                                pair.originalMessage().getSentAt(),
+                                sender.getFirstName(),
+                                sender.getLastName(),
+                                userImageUrl
+                        );
+                    })
+                    .collect(Collectors.toList());
+        }
     }
+
+    private record MessagePair(ChatMessage originalMessage, String translatedContent) {}
     /**
      * @apiNote 메시지 읽음 상태를 업데이트합니다.
      * 그룹 채팅에서 '누가 읽었는지'를 관리하는 로직입니다.
@@ -375,24 +458,6 @@ public class ChatService {
         readerParticipant.setLastReadMessageId(lastReadMessageId);
     }
 
-
-    @Transactional
-    public void rejoinRoom(Long roomId, Long userId) {
-        ChatParticipant participant = participantRepo.findByChatRoomIdAndUserId(roomId, userId)
-                .orElseThrow(() -> new BusinessException(ErrorCode.CHAT_PARTICIPANT_NOT_FOUND));
-
-        if (participant.getStatus() == ChatParticipantStatus.ACTIVE) {
-            throw new BusinessException(ErrorCode.CHAT_ROOM_JOIN_FAILED);
-        }
-
-        participant.reJoin();
-    }
-
-
-    public int countUnreadMessages(Long roomId, Long readerId) {
-        return chatMessageRepository.countUnreadMessages(roomId, readerId);
-    }
-
     public String getLastMessageContent(Long roomId) {
         ChatMessage last = chatMessageRepository.findTopByChatRoomIdOrderBySentAtDesc(roomId);
         return (last != null) ? last.getContent() : null;
@@ -410,31 +475,35 @@ public class ChatService {
                 .orElseThrow(() -> new BusinessException(ErrorCode.CHAT_ROOM_NOT_FOUND));
     }
 
-    public GroupChatDetailResponse getGroupChatDetails(Long roomId) {
-        ChatRoom chatRoom = chatRoomRepo.findByIdWithParticipants(roomId)
+    public GroupChatDetailResponse getGroupChatDetails(Long chatRoomId) {
+        ChatRoom chatRoom = chatRoomRepository.findById(chatRoomId)
                 .orElseThrow(() -> new BusinessException(ErrorCode.CHAT_ROOM_NOT_FOUND));
-
-        if (!chatRoom.getGroup()) {
-            throw new BusinessException(ErrorCode.CHAT_NOT_GROUP);
-        }
 
         String roomImageUrl = imageRepository.findFirstByImageTypeAndRelatedIdOrderByOrderIndexAsc(
                 ImageType.CHAT_ROOM, chatRoom.getId()
         ).map(Image::getUrl).orElse(null);
 
-        List<String> participants_image_url = chatRoom.getParticipants().stream()
-                .map(participant -> imageRepository.findFirstByImageTypeAndRelatedIdOrderByOrderIndexAsc(
-                        ImageType.USER, participant.getUser().getId()
-                ).map(Image::getUrl).orElse(null))
-                .collect(Collectors.toList());
+        Long ownerId = chatRoom.getOwner().getId();
+        String ownerImageUrl = imageRepository.findFirstByImageTypeAndRelatedIdOrderByOrderIndexAsc(
+                ImageType.USER,
+                ownerId
+        ).map(Image::getUrl).orElse(null);
 
-        int participantCount = chatRoom.getParticipants().size();
+        List<String> otherParticipantsImageUrls = chatRoom.getParticipants().stream()
+                .filter(participant -> !participant.getUser().getId().equals(ownerId))
+                .map(participant -> imageRepository.findFirstByImageTypeAndRelatedIdOrderByOrderIndexAsc(
+                        ImageType.USER,
+                        participant.getUser().getId()
+                ).map(Image::getUrl).orElse(null))
+                .filter(Objects::nonNull)
+                .collect(Collectors.toList());
 
         return GroupChatDetailResponse.from(
                 chatRoom,
                 roomImageUrl,
-                participantCount,
-                participants_image_url
+                chatRoom.getParticipants().size(),
+                otherParticipantsImageUrls,
+                ownerImageUrl
         );
     }
 
@@ -445,6 +514,7 @@ public class ChatService {
      * @param userId 참여를 요청하는 사용자의 ID
      */
     public void joinGroupChat(Long roomId, Long userId) {
+
         ChatRoom room = chatRoomRepo.findById(roomId)
                 .orElseThrow(() -> new BusinessException(ErrorCode.CHAT_ROOM_NOT_FOUND));
 
@@ -455,21 +525,22 @@ public class ChatService {
         User user = userRepository.findById(userId)
                 .orElseThrow(() -> new BusinessException(ErrorCode.USER_NOT_FOUND));
 
-        /* autor:김승환  사용자가 이미 참여자인지 확인
-        ChatParticipantStatus.LEFT 상태인 경우 다시 참여할 수 있도록 처리*/
         chatParticipantRepository.findByChatRoomIdAndUserId(roomId, userId)
-                .ifPresentOrElse(participant -> {
-                    if (participant.getStatus() == ChatParticipantStatus.ACTIVE) {
-                        throw new BusinessException(ErrorCode.ALREADY_CHAT_PARTICIPANT);
-                    } else {
-                        participant.reJoin();
-                    }
-                }, () -> {
-                    ChatParticipant newParticipant = new ChatParticipant(room, user);
-                    chatParticipantRepository.save(newParticipant);
-                });
+                .ifPresentOrElse(
+                        participant -> {
+                            if (participant.getStatus() == ChatParticipantStatus.ACTIVE) {
+                                throw new BusinessException(ErrorCode.ALREADY_CHAT_PARTICIPANT);
+                            } else {
+                                participant.reJoin();
+                            }
+                        },
+                        () -> {
+                            ChatParticipant newParticipant = new ChatParticipant(room, user);
+                            room.addParticipant(newParticipant);
+                            chatParticipantRepository.save(newParticipant);
+                        }
+                );
     }
-
     /**
      * 그룹 채팅방을 이름 키워드로 검색합니다.
      * @param keyword 검색 키워드
@@ -489,5 +560,219 @@ public class ChatService {
                     return GroupChatSearchResponse.from(chatRoom, roomImageUrl, participantCount);
                 })
                 .collect(Collectors.toList());
+    }
+
+    public List<ChatRoomSummaryResponse> searchRoomsByRoomName(Long userId, String roomName) {
+        List<ChatRoom> rooms = chatParticipantRepository.findChatRoomsByUserIdAndRoomName(userId, roomName);
+
+        return rooms.stream()
+                .map(room -> createChatRoomSummary(room, userId))
+                .collect(Collectors.toList());
+    }
+
+    private ChatRoomSummaryResponse createChatRoomSummary(ChatRoom room, Long userId) {
+
+        Optional<ChatMessage> lastMessageOpt = chatMessageRepository.findFirstByChatRoomIdOrderBySentAtDesc(room.getId());
+        String lastMessageContent = lastMessageOpt.map(ChatMessage::getContent).orElse(null);
+        LocalDateTime lastMessageTime = lastMessageOpt
+                .map(ChatMessage::getSentAt)
+                .map(instant -> LocalDateTime.ofInstant(instant, ZoneId.systemDefault()))
+                .orElse(null);
+
+
+        int unreadCount = countUnreadMessages(room.getId(), userId);
+
+        return ChatRoomSummaryResponse.from(
+                room,
+                userId,
+                lastMessageContent,
+                lastMessageTime,
+                unreadCount,
+                imageRepository
+        );
+    }
+
+    public int countUnreadMessages(Long roomId, Long userId) {
+        long totalMessagesCount = chatMessageRepository.countByChatRoomId(roomId);
+        long readMessagesCount = chatMessageReadStatusRepository.countByChatRoomIdAndReaderId(roomId, userId);
+        return (int) (totalMessagesCount - readMessagesCount);
+    }
+
+
+    @Transactional
+    public List<GroupChatMainResponse> getLatestGroupChats(Long lastChatRoomId) {
+        List<ChatRoom> latestRooms;
+
+        if (lastChatRoomId == null) {
+            latestRooms = chatRoomRepository.findTop10ByGroupTrueOrderByCreatedAtDesc();
+        } else {
+            latestRooms = chatRoomRepository.findTop10ByGroupTrueAndIdLessThanOrderByCreatedAtDesc(lastChatRoomId);
+        }
+
+        return latestRooms.stream()
+                .map(this::toGroupChatMainResponse)
+                .collect(Collectors.toList());
+    }
+
+    private GroupChatMainResponse toGroupChatMainResponse(ChatRoom chatRoom) {
+        String roomImageUrl = imageRepository.findFirstByImageTypeAndRelatedIdOrderByOrderIndexAsc(ImageType.CHAT_ROOM, chatRoom.getId())
+                .map(Image::getUrl)
+                .orElse(null);
+        String userCount = String.valueOf(chatRoom.getParticipants().size());
+        return new GroupChatMainResponse(
+                chatRoom.getId(),
+                chatRoom.getRoomName(),
+                chatRoom.getDescription(),
+                roomImageUrl,
+                userCount
+        );
+    }
+    @Transactional
+    public List<GroupChatMainResponse> getPopularGroupChats(int limit) {
+        List<ChatRoom> popularRooms = chatRoomRepository.findTopByGroupTrueOrderByParticipantCountDesc(limit);
+        return popularRooms.stream()
+                .map(this::toGroupChatSearchResponse)
+                .collect(Collectors.toList());
+    }
+
+    private GroupChatMainResponse toGroupChatSearchResponse(ChatRoom chatRoom) {
+        String roomImageUrl = imageRepository.findFirstByImageTypeAndRelatedIdOrderByOrderIndexAsc(
+                        ImageType.CHAT_ROOM, chatRoom.getId())
+                .map(Image::getUrl)
+                .orElse(null);
+        String userCount = String.valueOf(chatRoom.getParticipants().size());
+        return new GroupChatMainResponse(
+                chatRoom.getId(),
+                chatRoom.getRoomName(),
+                chatRoom.getDescription(),
+                roomImageUrl,
+                userCount
+        );
+    }
+    @Transactional
+    public List<ChatMessageFirstResponse> getFirstMessages(Long roomId, Long userId) {
+        ChatRoom chatRoom = chatRoomRepository.findById(roomId)
+                .orElseThrow(() -> new IllegalArgumentException("채팅방을 찾을 수 없습니다."));
+
+        chatParticipantRepository.findByChatRoomIdAndUserId(roomId, userId)
+                .orElseThrow(() -> new IllegalArgumentException("해당 채팅방에 참여하지 않은 사용자입니다."));
+        List<ChatMessage> messages = chatMessageRepository.findTop50ByChatRoomIdOrderBySentAtDesc(roomId);
+
+        return messages.stream()
+                .map(message -> ChatMessageFirstResponse.fromEntity(message, chatRoom, imageRepository))
+                .collect(Collectors.toList());
+    }
+    @Transactional
+    public ChatRoom createGroupChatRoom(Long userId, GroupChatCreateRequest request) {
+        User owner = userRepository.findById(userId)
+                .orElseThrow(() -> new BusinessException(ErrorCode.USER_NOT_FOUND));
+
+        ChatRoom groupChatRoom = new ChatRoom(
+                true,
+                Instant.now(),
+                request.roomName(),
+                request.description(),
+                owner
+        );
+        ChatRoom savedChatRoom = chatRoomRepository.save(groupChatRoom);
+
+        ChatParticipant participant = new ChatParticipant(savedChatRoom, owner);
+
+        chatParticipantRepository.save(participant);
+
+        if (request.roomImageUrl() != null && !request.roomImageUrl().isBlank()) {
+            Image roomImage = Image.of(
+                    ImageType.CHAT_ROOM,
+                    savedChatRoom.getId(),
+                    request.roomImageUrl(),
+                    0
+            );
+            imageRepository.save(roomImage);
+        }
+
+        return savedChatRoom;
+    }
+    /**
+     * 사용자 프로필 조회 서비스 메서드
+     * @param userId 조회할 사용자의 ID
+     * @return UserProfileResponse DTO
+     */
+    @Transactional(readOnly = true)
+    public ChatUserProfileResponse getUserProfile(Long userId) {
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new BusinessException(ErrorCode.USER_NOT_FOUND));
+
+        List<Image> images = imageRepository.findByImageTypeAndRelatedIdOrderByOrderIndexAsc(ImageType.USER, userId);
+
+        String imageUrl = images.stream()
+                .findFirst()
+                .map(Image::getUrl)
+                .orElse(null);
+
+        return ChatUserProfileResponse.from(user, imageUrl);
+    }
+    @Transactional
+    public void toggleTranslation(Long roomId, Long userId, boolean enable) {
+        ChatParticipant participant = chatParticipantRepository.findByChatRoomIdAndUserId(roomId, userId)
+                .orElseThrow(() -> new BusinessException(ErrorCode.NOT_CHAT_PARTICIPANT));
+        participant.toggleTranslation(enable);
+    }
+
+    @Transactional
+    public void processAndSendChatMessage(SendMessageRequest req) {
+
+        ChatMessage savedMessage = this.saveMessage(req.roomId(), req.senderId(), req.content());
+        String originalContent = savedMessage.getContent();
+        LocalDateTime sentAt = savedMessage.getSentAt().atZone(ZoneId.systemDefault()).toLocalDateTime();
+
+        ChatRoom chatRoom = savedMessage.getChatRoom();
+
+        List<ChatParticipant> participants = chatRoom.getParticipants();
+        User senderUser = userRepository.findById(req.senderId())
+                .orElseThrow(() -> new BusinessException(ErrorCode.USER_NOT_FOUND));
+        String userImageUrl = imageRepository.findFirstByImageTypeAndRelatedIdOrderByOrderIndexAsc(ImageType.USER,req.senderId())
+                .map(Image::getUrl)
+                .orElse(null);
+
+        for (ChatParticipant participant : participants) {
+            User recipient = participant.getUser();
+            String originContent = originalContent;
+            String targetContent = null;
+
+            if (participant.isTranslateEnabled()) {
+                String targetLanguage = recipient.getLanguage();
+                if (targetLanguage != null && !targetLanguage.isEmpty()) {
+                    List<String> translatedList = translationService.translateMessages(List.of(originContent), targetLanguage);
+                    if (!translatedList.isEmpty()) {
+                        targetContent = translatedList.getFirst();
+                    }
+                }
+            }
+
+            ChatMessageResponse messageResponse = new ChatMessageResponse(
+                    savedMessage.getId(),
+                    chatRoom.getId(),
+                    savedMessage.getSender().getId(),
+                    originContent,
+                    targetContent,
+                    savedMessage.getSentAt(),
+                    senderUser.getFirstName(),
+                    senderUser.getLastName(),
+                    userImageUrl
+            );
+            messagingTemplate.convertAndSend("/topic/user/" + recipient.getId() + "/messages", messageResponse);
+
+
+            int unreadCount = this.countUnreadMessages(req.roomId(), recipient.getId());
+            ChatRoomSummaryResponse summary = ChatRoomSummaryResponse.from(
+                    chatRoom,
+                    recipient.getId(),
+                    originalContent,
+                    sentAt,
+                    unreadCount,
+                    imageRepository
+            );
+            messagingTemplate.convertAndSend("/topic/user/" + recipient.getId() + "/rooms", summary);
+        }
     }
 }
